# openai-batcher

./: Dockerfile  Experiment-2-1 - openai batch.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/examples/: Sentiment-Analysis.ipynb  sentiment-analysis.py
src/openai_batcher/: _prompt_generator.py  batch.py  config.py  interface.py  monitor.py  prompt_generator.py  sample.py  setup.py  validation.py
